# Master_Thesis

./: .gitignore  OLD_slepton_loop.nb
Code/: makefile
Code/LHAPDF/LHAPDF-6.5.6/: CONFIGFLAGS  Makefile  Makefile.in  config.status  configure.ac  lhapdf.pc  lhapdf.pc.in  lhapdfenv.sh  libtool  plotpdfs
Code/LHAPDF/LHAPDF-6.5.6/tests/: Makefile  Makefile.am  Makefile.in  testalphas.cc  testunc.py
Code/LHAPDF/lib/: libLHAPDF.dylib
Code/PDF_integration/: makefile  plot.py
Code/PDF_integration/integration_test/: makefile  (+1 more)
Code/hardcoded_lo_integration/: main.cpp  sigma_plot.py
Code/pdf_integration/: dsigma_plot.py  main.cpp  sigma_plot.py
Code/vegas_pdf_integration/: makefile
Code/xsec_with_structs/: makefile
Mathematica/: Div Calculations.nb  NLO_radiation_slepton.nb  PVtesting.nb  loopTest.m  loop_slepton_side.nb  playground.nb  self_energies.nb  slepton_lo.nb  slepton_loop.nb
Mathematica/Drafts/: box_diagrams.nb  box_tensor_reduction.nb  initial_final_interference.nb  slepton_counterterms.nb  slepton_radiation.nb  slepton_virtual.nb  virtual_hadron_side.nb  virtual_slepton_side.nb
Mathematica/Finished_somewhat/: loop_slepton_side.nb  slepton_lo.nb  slepton_radiation.nb  sleptonside_x_integration.nb
Mathematica/Include/: PrettyNotation.wl  Tools.wl
Mathematica/Intermediate_Calculations/: emission_interference.nb  self_energies.nb  virtual_sleptonside.nb  xIntegration.nb
Mathematica/Trash_but_afraid_to_delete/: OLD_EXTRA_NLO_radiation_slepton.nb  OLD_NLO_radiation_slepton.nb  OLD_slepton_loop.nb
Mathematica/results/: LOamp.m  LOampSquared.m
(+156 files in other folders)
